:bug: Fix notification vertical alignment (#6272)

--- a/frontend/src/app/main/ui/ds/notifications/shared/notification_pill.scss
+++ b/frontend/src/app/main/ui/ds/notifications/shared/notification_pill.scss
@@ -88,6 +88,9 @@
   display: grid;
   max-height: 92vh;
   overflow: hidden;
+}
+
+.with-detail {
   grid-template-rows: auto 1fr;
 }
 
